--- a/html/index.html
+++ b/html/index.html
@@ -1,14 +1,19 @@
 
 <html>
     <body>
-    <header>hola gente soy kevin</header>
-    <link rel="stylesheet" href="/css/blogspot.css" />
-    
-        <h1>
-            la vida es increible
-        </h1>
-        <h2>
-            me estoy quedando bn dormido alv
-        </h2>
-    </body>
+        <div id="container">
+        <header>hola gente soy kevin</header>
+        
+            <h1>
+                la vida es increible
+            </h1>
+            <h2>
+                me estoy quedando bn dormido alv
+            </h2>
+            <p>
+                <strong> esto simplemente es texto que se va a reflejar en la web en negritas</strong>
+                <div id="container"></div>
+            </p>
+        </div>
+        </body>
 </html>
