boton de twitter

--- a/html/index.html
+++ b/html/index.html
@@ -1,19 +1,17 @@
-
+<!DOCTYPE html>
 <html>
-    <body>
-        <div id="container">
-        <header>hola gente soy kevin</header>
-        
-            <h1>
-                la vida es increible
-            </h1>
-            <h2>
-                me estoy quedando bn dormido alv
-            </h2>
-            <p>
-                <strong> esto simplemente es texto que se va a reflejar en la web en negritas</strong>
-                <div id="container"></div>
-            </p>
-        </div>
-        </body>
+  <head>
+    <title>Mi página de Twitter</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+  </head>
+  <body>
+    <div class="container">
+      <div class="tweet-box">
+        <form>
+          <textarea placeholder="¿Qué está pasando?"></textarea>
+          <button type="submit">Twittear</button>
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
